Bug 1962816 - Invert sign of delta-y when computing glyph advances for ExtTextOutW, because the GDI coordinate system is inverted. r=gfx-reviewers,jrmuizel

We used to have a sign-inversion like this in our cairo backend code:

https://searchfox.org/mozilla-central/rev/0b6a214452a91745638b03d71da86ebe45e34efe/gfx/cairo/cairo/src/cairo-win32-surface.c#1892-1893

This was previously fixed (by me!) back in bug 454098, but in the
process of updating cairo the change got lost as the code had moved
around and so our old patch file no longer applied.

(I'll see if I can get the standalone test program from that bug
working again, and file the issue upstream.)

Differential Revision: https://phabricator.services.mozilla.com/D254737